--- a/src/app/searchmovie/searchmovie.component.html
+++ b/src/app/searchmovie/searchmovie.component.html
@@ -17,7 +17,7 @@
     </div>
   </header>
   <div class="container search">
-    <input type="text" maxlength="9" placeholder="Digite o Título do Filme" [(ngModel)]="titulo" />
+    <input type="text" placeholder="Digite o Título do Filme" [(ngModel)]="titulo" />
     <!-- Conexão com o campo cep do componente -->
     <button (click)="onConsultaFilme()">Consultar</button>
   </div>
@@ -33,7 +33,14 @@
     <p><b>Tempo de Duração:</b> {{ filmes?.Runtime }}</p>
     <p><b>Genêro:</b> {{ filmes?.Genre }}</p>
     <p><b>Avaliação Imdb:</b> {{ filmes?.imdbRating }}</p>
+    
+    <button (click)="toggleFavorite(filmes)">Favoritar
+    </button>
+    
   </div>
+
+  
+  
 
   <footer>
     <p>Copyrigth 2024</p>
